add_subdirectory(test-patterns)
add_subdirectory(play-glfw)
add_subdirectory(render-glfw)
add_subdirectory(widgets-glfw)
if(TLRENDER_USD)
    add_subdirectory(usdrecord-glfw)
endif()
if(TLRENDER_QT6 OR TLRENDER_QT5)
    add_subdirectory(filmstrip-qtwidget)
    add_subdirectory(panorama-qtwidget)
    add_subdirectory(play-qtquick)
    add_subdirectory(simple-qtwidget)
    add_subdirectory(widgets-qtwidget)
endif()

