add_subdirectory(player)
add_subdirectory(render)
add_subdirectory(test-patterns)
add_subdirectory(widgets)
if(TLRENDER_QT6 OR TLRENDER_QT5)
    add_subdirectory(panorama-qtwidget)
    add_subdirectory(player-qtquick)
    add_subdirectory(player-qtwidget)
    add_subdirectory(widgets-qtwidget)
endif()
