add_subdirectory(tlBaseApp)
add_subdirectory(tlCore)
add_subdirectory(tlGL)
add_subdirectory(tlDevice)
add_subdirectory(tlIO)
add_subdirectory(tlPlay)
add_subdirectory(tlResourceApp)
add_subdirectory(tlTimeline)
add_subdirectory(tlTimelineUI)
add_subdirectory(tlUI)
if(TLRENDER_GLFW AND (TLRENDER_PROGRAMS OR TLRENDER_EXAMPLES))
	add_subdirectory(tlUIApp)
endif()
if(TLRENDER_GLFW AND TLRENDER_PROGRAMS)
	add_subdirectory(tlBakeApp)
	add_subdirectory(tlPlayApp)
endif()
if(TLRENDER_QT6 OR TLRENDER_QT5 AND NOT "${TLRENDER_API}" STREQUAL "GLES_2")
    add_subdirectory(tlQt)
    add_subdirectory(tlQtQuick)
    add_subdirectory(tlQtWidget)
	if(TLRENDER_PROGRAMS)
		add_subdirectory(tlPlayQtApp)
	endif()
endif()
