add_subdirectory(tlCore)
add_subdirectory(tlDevice)
add_subdirectory(tlIO)
add_subdirectory(tlResource)
add_subdirectory(tlTimeline)
add_subdirectory(tlTimelineUI)
add_subdirectory(tlTimelineGL)
if(TLRENDER_PROGRAMS)
    add_subdirectory(tlBakeApp)
    add_subdirectory(tlPlayApp)
endif()
if(TLRENDER_QT6 OR TLRENDER_QT5)
    add_subdirectory(tlQt)
    add_subdirectory(tlQtQuick)
    add_subdirectory(tlQtWidget)
endif()
