add_subdirectory(tlAppTest)
add_subdirectory(tlCoreTest)
add_subdirectory(tlIOTest)
add_subdirectory(tlTestLib)
add_subdirectory(tlTimelineTest)
add_subdirectory(tltest)
if(TLRENDER_BUILD_GL)
    add_subdirectory(tlRenderGLTest)
endif()
if(TLRENDER_BUILD_QT6 OR TLRENDER_BUILD_QT5)
    add_subdirectory(tlQtTest)
endif()
